--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,291 @@ body {
 .about .info button {
   margin-top: 30px;
 }
+
+.skills {
+  display: flex;
+  justify-content: space-around;
+  padding: 0 50px;
+}
+
+.skills .left {
+  width: 680px;
+}
+
+.skills .left .info h3 {
+  color: #fff;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.skills .left .info p {
+  color: #ccc;
+  font-size: 14px;
+}
+
+.skills .left button {
+  margin-top: 30px;
+}
+
+.skills .right {
+  width: 420px;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+.skills .right .item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #383e45;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.skills .right .item i {
+  font-size: 34px;
+  color: #fff;
+}
+
+footer {
+  position: relative;
+  background: #1c1c1c;
+  padding: 80px 50px 40px;
+  margin-top: 100px;
+}
+
+footer .start {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  background-color: #ffb742;
+  padding: 30px 25px;
+  border-radius: 15px;
+  width: 70%;
+  top: -16%;
+  left: 15%;
+}
+
+footer .start p {
+  font-size: 13px;
+  width: 35%;
+}
+
+footer .start button {
+  background: transparent;
+  border: 1px solid #000;
+  cursor: pointer;
+  padding: 8px 20px;
+  border-radius: 100px;
+  transition: all 0.3s ease;
+}
+
+footer .start button:hover {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+footer .cols {
+  display: flex;
+  align-items: start;
+}
+
+footer .cols .about-col {
+  flex: 3;
+}
+
+footer .cols .about-col h3 {
+  color: #ffb742;
+  margin-bottom: 20px;
+}
+
+footer .cols .about-col p {
+  color: #ccc;
+  font-size: 13px;
+}
+
+footer .cols .links-col {
+  flex: 3;
+}
+
+footer .cols .links-col h4 {
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+footer .cols .links-col a {
+  display: block;
+  text-decoration: none;
+  color: #7b7b7b;
+  font-size: 14px;
+  line-height: 26px;
+}
+
+footer .cols .links-col a:hover {
+  color: #ffb742;
+}
+
+@media screen and (max-width: 1100px) {
+  .guarantee {
+    flex-wrap: wrap;
+  }
+
+  .skills {
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .skills .left {
+    width: 500px;
+  }
+
+  .skills .left .info {
+    font-size: 22px;
+  }
+
+  .skills .left .info p {
+    font-size: 12px;
+  }
+
+  footer {
+    margin-top: 150px;
+  }
+
+  footer .start {
+    width: 90%;
+    left: 5%;
+    top: -20%;
+  }
+
+  footer .cols {
+    flex-wrap: wrap;
+  }
+
+  footer .cols .about-col {
+    flex-basis: 50%;
+  }
+
+  footer .cols .links-col {
+    flex-basis: 50%;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .navbar button {
+    display: none;
+  }
+
+  .main h4 {
+    font-size: 24px;
+  }
+
+  .main p.title {
+    font-size: 36px;
+  }
+
+  .main p.subtitle {
+    font-size: 14px;
+  }
+
+  .guarantee .item {
+    flex-basis: 100%;
+  }
+
+  .about {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .navbar {
+    justify-content: center;
+  }
+
+  .navbar h2 {
+    display: none;
+  }
+
+  .navbar ul li a {
+    font-size: 14px;
+  }
+
+  .main {
+    margin-top: 50px;
+    height: 320px;
+    justify-content: start;
+  }
+
+  .main h4 {
+    font-size: 20px;
+  }
+
+  .main p.title {
+    font-size: 28px;
+  }
+
+  .main p.subtitle {
+    font-size: 12px;
+  }
+
+  .main img {
+    margin-top: 40px;
+    width: 150px;
+    height: 150px;
+  }
+
+  .skills {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .skills .right {
+    justify-content: space-between;
+  }
+
+  .skills .left .info h3 {
+    font-size: 20px;
+  }
+
+  footer .start {
+    top: -8%;
+  }
+
+  footer .start p {
+    display: none;
+  }
+
+  footer .cols .about-col {
+    flex-basis: 100%;
+    margin-bottom: 40px;
+  }
+
+  footer .cols .links-col {
+    flex-basis: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main p.title {
+    font-size: 18px;
+  }
+
+  .main p.subtitle {
+    font-size: 10px;
+  }
+
+  .guarantee .item .info h3 {
+    font-size: 20px;
+  }
+
+  .guarantee .item .info p {
+    font-size: 12px;
+  }
+}
