--- a/css/style.css
+++ b/css/style.css
@@ -212,12 +212,14 @@ body {
 
 .skills {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
   padding: 0 50px;
 }
 
 .skills .left {
-  width: 680px;
+  width: 1169px;
+  justify-self: start;
 }
 
 .skills .left .info h3 {
@@ -236,11 +238,11 @@ body {
 }
 
 .skills .right {
-  width: 420px;
+  width: 280px;
   height: 120px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   flex-wrap: wrap;
   gap: 12px;
 }
@@ -263,26 +265,25 @@ body {
 footer {
   position: relative;
   background: #1c1c1c;
-  padding: 80px 50px 40px;
-  margin-top: 100px;
+  padding: 80px 50px 80px;
+  margin-top: 80px;
 }
 
 footer .start {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   position: absolute;
   background-color: #ffb742;
   padding: 30px 25px;
   border-radius: 15px;
   width: 70%;
-  top: -16%;
+  top: -19%;
   left: 15%;
 }
 
 footer .start p {
   font-size: 13px;
-  width: 35%;
 }
 
 footer .start button {
