--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ body {
   color: #fff;
   font-size: 32px;
   font-weight: 600;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .about .info p {
@@ -290,12 +290,6 @@ footer .cols .links-col a:hover {
   }
 }
 
-@media screen and (max-width: 1401px) {
-  .skills .right {
-    flex-direction: column;
-  }
-}
-
 @media screen and (max-width: 1255px) {
   .guarantee {
     flex-wrap: wrap;
@@ -356,10 +350,6 @@ footer .cols .links-col a:hover {
     justify-content: start;
   }
 
-  .main h4 {
-    font-size: 20px;
-  }
-
   .main p.title {
     font-size: 28px;
   }
@@ -377,14 +367,6 @@ footer .cols .links-col a:hover {
   .skills {
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  .skills .right {
-    justify-content: space-between;
-  }
-
-  .skills .left .info h3 {
-    font-size: 20px;
   }
 
   footer .start {
@@ -427,5 +409,11 @@ footer .cols .links-col a:hover {
 
   .guarantee .item .info p {
     font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .container {
+    padding: 0px 24px;
   }
 }
