--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@ footer {
 footer .cols {
   display: flex;
   align-items: start;
+  align-items: center;
 }
 
 footer .cols .about-col {
@@ -256,6 +257,7 @@ footer .cols .about-col {
 footer .cols .about-col h3 {
   color: #ffb742;
   margin-bottom: 20px;
+  font-size: 24px;
 }
 
 footer .cols .about-col p {
@@ -264,24 +266,18 @@ footer .cols .about-col p {
 }
 
 footer .cols .links-col {
-  flex: 3;
-}
-
-footer .cols .links-col h4 {
-  color: #fff;
-  margin-bottom: 20px;
+  font-size: 30px;
+  display: flex;
+  gap: 20px;
 }
 
 footer .cols .links-col a {
-  display: block;
-  text-decoration: none;
-  color: #7b7b7b;
-  font-size: 14px;
-  line-height: 26px;
+  color: white;
 }
 
 footer .cols .links-col a:hover {
   color: #ffb742;
+  transition: color 0.3s ease;
 }
 
 @media screen and (max-width: 1416px) {
@@ -299,121 +295,118 @@ footer .cols .links-col a:hover {
     flex-basis: 50%;
   }
 
-  footer .cols .links-col {
-    flex-basis: 50%;
-  }
-}
+  @media screen and (max-width: 780px) {
+    .navbar button {
+      display: none;
+    }
 
-@media screen and (max-width: 780px) {
-  .navbar button {
-    display: none;
-  }
+    .main h4 {
+      font-size: 24px;
+    }
 
-  .main h4 {
-    font-size: 24px;
-  }
+    .main p.title {
+      font-size: 36px;
+    }
 
-  .main p.title {
-    font-size: 36px;
-  }
+    .main p.subtitle {
+      font-size: 14px;
+    }
 
-  .main p.subtitle {
-    font-size: 14px;
-  }
+    .guarantee .item {
+      flex-basis: 100%;
+    }
 
-  .guarantee .item {
-    flex-basis: 100%;
-  }
-
-  .about {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .navbar {
-    justify-content: center;
+    .about {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
-  .navbar h2 {
-    display: none;
+  @media screen and (max-width: 650px) {
+    .navbar {
+      justify-content: center;
+    }
+
+    .navbar h2 {
+      display: none;
+    }
+
+    .navbar ul li a {
+      font-size: 14px;
+    }
+
+    .main {
+      margin-top: 50px;
+      height: 320px;
+      justify-content: start;
+    }
+
+    .main p.title {
+      font-size: 28px;
+    }
+
+    .main p.subtitle {
+      font-size: 12px;
+    }
+
+    .main img {
+      margin-top: 40px;
+      width: 150px;
+      height: 150px;
+    }
+
+    .skills {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    footer .start {
+      top: -8%;
+    }
+
+    footer .start p {
+      display: none;
+    }
+
+    footer .cols .about-col {
+      flex-basis: 100%;
+      margin-bottom: 40px;
+    }
+
+    footer .cols {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+    }
   }
 
-  .navbar ul li a {
-    font-size: 14px;
+  @media screen and (max-width: 579px) {
+    .main {
+      height: 100%;
+    }
   }
 
-  .main {
-    margin-top: 50px;
-    height: 320px;
-    justify-content: start;
+  @media screen and (max-width: 480px) {
+    .main p.title {
+      font-size: 18px;
+    }
+
+    .main p.subtitle {
+      font-size: 10px;
+    }
+
+    .guarantee .item .info h3 {
+      font-size: 20px;
+    }
+
+    .guarantee .item .info p {
+      font-size: 12px;
+    }
   }
 
-  .main p.title {
-    font-size: 28px;
-  }
-
-  .main p.subtitle {
-    font-size: 12px;
-  }
-
-  .main img {
-    margin-top: 40px;
-    width: 150px;
-    height: 150px;
-  }
-
-  .skills {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  footer .start {
-    top: -8%;
-  }
-
-  footer .start p {
-    display: none;
-  }
-
-  footer .cols .about-col {
-    flex-basis: 100%;
-    margin-bottom: 40px;
-  }
-
-  footer .cols .links-col {
-    flex-basis: 100%;
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (max-width: 579px) {
-  .main {
-    height: 100%;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .main p.title {
-    font-size: 18px;
-  }
-
-  .main p.subtitle {
-    font-size: 10px;
-  }
-
-  .guarantee .item .info h3 {
-    font-size: 20px;
-  }
-
-  .guarantee .item .info p {
-    font-size: 12px;
-  }
-}
-
-@media screen and (max-width: 430px) {
-  .container {
-    padding: 0px 24px;
+  @media screen and (max-width: 430px) {
+    .container {
+      padding: 0px 24px;
+    }
   }
 }
